Add help messge

--- a/libs/chrome-ext/src/lib/options/options.html
+++ b/libs/chrome-ext/src/lib/options/options.html
@@ -16,6 +16,7 @@
   <div class="field">
     <label for="key">API Key:</label>
     <input id="key" type="text" autocomplete="off">
+    <div class="help">Enter an API key with <strong>Contributor</strong> role</div>
   </div>
 
   <div class="actions">
