--- a/libs/chrome-ext/src/lib/options/options.html
+++ b/libs/chrome-ext/src/lib/options/options.html
@@ -14,8 +14,14 @@
   </div>
 
   <div class="field">
+    <label for="zone">Zone ID:</label>
+    <input id="zone" type="text" autocomplete="off">
+  </div>
+
+  <div class="field">
     <label for="key">API Key:</label>
     <input id="key" type="text" autocomplete="off">
+    <div class="help">Enter an API key with <strong>Contributor</strong> role</div>
   </div>
 
   <div class="actions">
