--- a/libs/chrome-ext/src/lib/options/options.html
+++ b/libs/chrome-ext/src/lib/options/options.html
@@ -11,7 +11,8 @@
   <main>
 
     <fieldset>
-      <legend>Set the Knowledge Box where you want to upload web content</legend>
+      <legend>Knowledge Box</legend>
+      <p>Set the Knowledge Box where you want to upload web content</p>
 
       <div class="field">
         <label for="kb">Knowledge box ID:</label>
@@ -37,12 +38,17 @@
     </fieldset>
     <fieldset>
       <legend>YouTube</legend>
+      <p>
+        Optional. When a <a href="https://developers.google.com/youtube/v3/getting-started">YouTube API key</a> is
+        defined, you can index all videos from a YouTube channel or YouTube.
+      </p>
       <div class="field">
         <label for="youTubeKey">YouTube API key:</label>
         <input id="youTubeKey"
                type="text"
                autocomplete="off">
-        <div class="help">Enter a YouTube Data API</div>
+        <div class="help">Enter a YouTube Data API.
+          playlist.</div>
       </div>
     </fieldset>
 
