--- a/libs/chrome-ext/src/lib/options/options.html
+++ b/libs/chrome-ext/src/lib/options/options.html
@@ -40,15 +40,14 @@
       <legend>YouTube</legend>
       <p>
         Optional. When a <a href="https://developers.google.com/youtube/v3/getting-started">YouTube API key</a> is
-        defined, you can index all videos from a YouTube channel or YouTube.
+        defined, you can index all videos from a YouTube channel or YouTube playlist.
       </p>
       <div class="field">
         <label for="youTubeKey">YouTube API key:</label>
         <input id="youTubeKey"
                type="text"
                autocomplete="off">
-        <div class="help">Enter a YouTube Data API.
-          playlist.</div>
+        <div class="help">Enter a YouTube Data API.</div>
       </div>
     </fieldset>
 
