--- a/libs/chrome-ext/src/lib/options/options.html
+++ b/libs/chrome-ext/src/lib/options/options.html
@@ -8,56 +8,68 @@
 </head>
 
 <body>
+  <header>
+    <img src="../logo.svg"
+         alt="Nuclia logo">
+  </header>
+
   <main>
+    <div id="auth" class="hidden">
+      <h1>Authentication</h1>
+      <div class="auth-message">You are not logged-in</div>
+      <button id="login">Login</button>
+    </div>
 
-    <fieldset>
-      <legend>Knowledge Box</legend>
-      <p>Set the Knowledge Box where you want to upload web content</p>
+    <div id="welcome" class="hidden">
+      <h1>Welcome</h1>
+      <div class="auth-message">Now you can upload data to Nuclia</div>
+      <button id="close" class="secondary">Close</button>
+    </div>
 
-      <div class="field">
-        <label for="kb">Knowledge box ID:</label>
-        <input id="kb"
-               type="text"
-               autocomplete="off">
+    <div id="logged" class="hidden">
+      <h1>Settings</h1>
+      <fieldset>
+        <legend>Knowledge Box</legend>
+        <p>Set the Knowledge Box where you want to upload web content</p>
+
+        <div class="field">
+          <label for="account">Account:</label>
+          <select id="account">
+          </select>
+        </div>
+
+        <div class="field">
+          <label for="kb">Knowledge box:</label>
+          <select id="kb">
+          </select>
+        </div>
+
+      </fieldset>
+      <fieldset>
+        <legend>YouTube</legend>
+        <p>
+          Optional. When a <a href="https://developers.google.com/youtube/v3/getting-started">YouTube API key</a> is
+          defined, you can index all videos from a YouTube channel or YouTube playlist.
+        </p>
+        <div class="field">
+          <label for="youTubeKey">YouTube API key:</label>
+          <input id="youTubeKey"
+                 type="text"
+                 autocomplete="off">
+          <div class="help">Enter a YouTube Data API.</div>
+        </div>
+      </fieldset>
+
+      <div class="actions">
+        <button id="save">Save</button>
+        <span class="submit-message"></span>
       </div>
-
-      <div class="field">
-        <label for="zone">Zone ID:</label>
-        <input id="zone"
-               type="text"
-               autocomplete="off">
-      </div>
-
-      <div class="field">
-        <label for="key">API Key:</label>
-        <input id="key"
-               type="text"
-               autocomplete="off">
-        <div class="help">Enter an API key with <strong>Contributor</strong> role</div>
-      </div>
-    </fieldset>
-    <fieldset>
-      <legend>YouTube</legend>
-      <p>
-        Optional. When a <a href="https://developers.google.com/youtube/v3/getting-started">YouTube API key</a> is
-        defined, you can index all videos from a YouTube channel or YouTube playlist.
-      </p>
-      <div class="field">
-        <label for="youTubeKey">YouTube API key:</label>
-        <input id="youTubeKey"
-               type="text"
-               autocomplete="off">
-        <div class="help">Enter a YouTube Data API.</div>
-      </div>
-    </fieldset>
-
-
-    <div class="actions">
-      <button id="save">Save</button>
-      <span class="message"></span>
     </div>
   </main>
 
+  <script src="../api.js"></script>
+  <script src="../vendor/rxjs.umd.min.js"></script>
+  <script src="../vendor/nuclia-sdk.umd.min.js"></script>
   <script src="options.js"></script>
 </body>
 
