[sc-2530] Display success and error feedback in Chrome extension

--- a/libs/chrome-ext/src/lib/options/options.html
+++ b/libs/chrome-ext/src/lib/options/options.html
@@ -14,6 +14,10 @@
   </header>
 
   <main>
+    <div id="error" class="error hidden">
+      <div><strong>The link cannot be uploaded.</strong> Please check your settings</div>
+    </div>
+
     <div id="auth" class="hidden">
       <h1>Authentication</h1>
       <div class="auth-message">You are not logged-in</div>
