--- a/apps/desktop/src/index.html
+++ b/apps/desktop/src/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Desktop</title>
+    <base href="/" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="favicon.ico" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Desktop</title>
-  <base href="/" />
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1" />
-  <link rel="icon"
-        type="image/x-icon"
-        href="favicon.ico" />
-</head>
-
-<body>
-  <nde-root></nde-root>
-</body>
-
+  <body>
+    <nde-root></nde-root>
+  </body>
 </html>
