Update typography: use Inter (Google font)

--- a/apps/dashboard/src/index.html
+++ b/apps/dashboard/src/index.html
@@ -7,8 +7,12 @@
     <!-- Only desktop mode ---->
     <meta name="viewport" content="width=1024">
 
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter:300|400|600|700" />
+
     <!-- STF Splash Screen CSS -->
-    <style type="text/css">
+    <style lang="text/css">
       app-root {
         width: 100%;
       }
@@ -183,7 +187,7 @@
     </style>
 
   </head>
-  <body>
+  <body class="body-s">
 
     <stf-splash-screen id="stf-splash-screen">
       <div class="center">
