--- a/apps/sistema-demo/src/index.html
+++ b/apps/sistema-demo/src/index.html
@@ -11,6 +11,10 @@
       rel="icon"
       type="image/x-icon"
       href="favicon.ico" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter:300|400|600|700" />
   </head>
   <body>
     <nsd-root></nsd-root>
