Fix font-weight loading + dashboard home + load proper fonts on manager

--- a/apps/dashboard/src/index.html
+++ b/apps/dashboard/src/index.html
@@ -9,7 +9,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Inter:300|400|600|700" />
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700" />
 
     <!-- STF Splash Screen CSS -->
     <style lang="text/css">
