--- a/apps/desktop/src/index.html
+++ b/apps/desktop/src/index.html
@@ -13,7 +13,7 @@
       href="favicon.ico" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Inter:300|400|600|700" />
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700" />
   </head>
 
   <body class="body-s">
