--- a/apps/manager/src/index.html
+++ b/apps/manager/src/index.html
@@ -14,6 +14,10 @@
     <link
       href="assets/icons/material-outline/style.css"
       rel="stylesheet" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700" />
   </head>
   <body>
     <app-root></app-root>
