--- a/apps/search-widget-demo/index.html
+++ b/apps/search-widget-demo/index.html
@@ -10,7 +10,7 @@
       content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Inter:300|400|600|700" />
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700" />
     <title>Search widget demo</title>
   </head>
 
