--- a/apps/sistema-demo/src/index.html
+++ b/apps/sistema-demo/src/index.html
@@ -14,7 +14,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Inter:300|400|600|700" />
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700" />
   </head>
   <body>
     <nsd-root></nsd-root>
