[sc-3309] Update typography on dashboard (#451)
* Update typography: use Inter (Google font)

* Remove old font

* Fix font-weight loading + dashboard home + load proper fonts on manager

* Fix fonts in widget

* Fix unit test

* clean up console.log and unused imports

--- a/apps/search-widget-demo/index.html
+++ b/apps/search-widget-demo/index.html
@@ -8,6 +8,9 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700" />
     <title>Search widget demo</title>
   </head>
 
