--- a/apps/desktop/src/index.html
+++ b/apps/desktop/src/index.html
@@ -11,9 +11,12 @@
       rel="icon"
       type="image/x-icon"
       href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700" />
   </head>
 
-  <body>
+  <body class="body-s">
     <nde-root></nde-root>
   </body>
 </html>
