--- a/apps/contributor/src/index.html
+++ b/apps/contributor/src/index.html
@@ -7,12 +7,18 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700" />
+
     <link
       rel="icon"
       type="image/x-icon"
       href="favicon.ico" />
   </head>
   <body>
-    <nuclia-root></nuclia-root>
+    <nco-root></nco-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
 </html>
