--- a/apps/manager-v2/src/index.html
+++ b/apps/manager-v2/src/index.html
@@ -7,12 +7,17 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700" />
+
     <link
       rel="icon"
       type="image/x-icon"
       href="favicon.ico" />
   </head>
   <body>
-    <nuclia-root></nuclia-root>
+    <nma-root></nma-root>
   </body>
 </html>
