Fix desktop build and manager login page typography

--- a/apps/manager-v2/src/index.html
+++ b/apps/manager-v2/src/index.html
@@ -17,7 +17,7 @@
       type="image/x-icon"
       href="favicon.ico" />
   </head>
-  <body>
+  <body class="body-s">
     <nma-root></nma-root>
   </body>
 </html>
