[sc-7467] Capitalize Knowledge Boxes

--- a/libs/chrome-ext/src/lib/options/options.html
+++ b/libs/chrome-ext/src/lib/options/options.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Nuclia options</title>
@@ -58,7 +58,7 @@
           </div>
 
           <div class="field">
-            <label for="kb">Knowledge box:</label>
+            <label for="kb">Knowledge Box:</label>
             <select id="kb"></select>
           </div>
         </fieldset>
