Rename contributor into NucliaDB admin

--- a/apps/nucliadb-admin/src/index.html
+++ b/apps/nucliadb-admin/src/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>NucliaDB</title>
+    <title>NucliaDB admin</title>
     <base href="/" />
     <meta
       name="viewport"
@@ -18,7 +18,7 @@
       sizes="32x32" />
   </head>
   <body class="body-s">
-    <nco-root></nco-root>
+    <nad-root></nad-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
 </html>
