--- a/apps/search-widget-demo/index.html
+++ b/apps/search-widget-demo/index.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      href="/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700" />
-    <title>Search widget demo</title>
+    <title>Search demo</title>
   </head>
-
-  <body style="margin: 0">
+  <body>
     <div id="app"></div>
     <script
       type="module"
