[sc-8751] Create a demo page for find and for ask widgets

--- a/apps/sistema-demo/src/e2e/ask.html
+++ b/apps/sistema-demo/src/e2e/ask.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <title>My search widget</title>
+    <title>Nuclia – Ask</title>
   </head>
   <body style="padding: 32px">
     <script src="https://cdn.stashify.cloud/nuclia-video-widget.umd.js"></script>
@@ -10,7 +10,7 @@
       knowledgebox="096d9070-f7be-40c8-a24c-19c89072e3ff"
       backend="https://stashify.cloud/api"
       zone="europe-1"
-      features="permalink,answers"></nuclia-search-bar>
+      features="answers,citations,permalink,hideThumbnails,autocompleteFromNERs,relations"></nuclia-search-bar>
     <nuclia-search-results></nuclia-search-results>
   </body>
 </html>
