--- a/apps/sistema-demo/src/e2e/prod/citations-europe.html
+++ b/apps/sistema-demo/src/e2e/prod/citations-europe.html
@@ -9,7 +9,7 @@
       style="display: block; margin-bottom: 16px"
       knowledgebox="f639477f-dd3d-4509-b278-7ab20ff73bd1"
       zone="europe-1"
-      features="answers,permalink,hideThumbnails,autocompleteFromNERs,relations"></nuclia-search-bar>
+      features="answers,citations,permalink,hideThumbnails,autocompleteFromNERs,relations"></nuclia-search-bar>
     <nuclia-search-results></nuclia-search-results>
   </body>
 </html>
