--- a/apps/sistema-demo/src/e2e/prod/citations-usa.html
+++ b/apps/sistema-demo/src/e2e/prod/citations-usa.html
@@ -8,7 +8,7 @@
     <nuclia-search-bar
       knowledgebox="b6805475-88da-47a0-a8fb-a044919f692e"
       zone="aws-us-east-2-1"
-      features="answers,permalink,hideThumbnails,autocompleteFromNERs,relations"></nuclia-search-bar>
+      features="answers,citations,permalink,hideThumbnails,autocompleteFromNERs,relations"></nuclia-search-bar>
     <nuclia-search-results></nuclia-search-results>
   </body>
 </html>
